Prevent tag text from wrapping under the header button
Fixes #51.

--- a/css/acme.css
+++ b/css/acme.css
@@ -71,6 +71,7 @@ header#top nav a:not(:last-child) {
 	border-color: #8888CC;
 	background-color: #EAFFFF;
 	height: 100%;
+	float: left;
 }
 
 .wintag h1 {
